Bug 1638634 - fix startup Crash in [@ nsImapMailFolder::AddSubfolderWithPath]. r=benc